Finished adding text to chapter 1-17; end of book 1.

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
+@namespace xml "http://www.w3.org/XML/1998/namespace";
 
 [epub|type~="z3998:song"] p{
     text-align: initial;
@@ -23,4 +24,27 @@
 p span.i1{
     text-indent: -1em;
     padding-left: 2em;
+}
+
+[epub|type~="z3998:verse"] p{
+    text-align: initial;
+    text-indent: 0;
+}
+
+[epub|type~="z3998:verse"] p > span{
+    display: block;
+    padding-left: 1em;
+    text-indent: -1em;
+}
+
+[epub|type~="z3998:verse"] p > span + br{
+    display: none;
+}
+
+[epub|type~="z3998:verse"] p + p{
+    margin-top: 1em;
+}
+
+body [xml|lang]{
+    font-style: italic;
 }
